--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -14,7 +14,7 @@
         android:background="#FFFF"
         android:layout_below="@+id/etCP3"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="280dp"
 
         android:text="@string/promjenichangepass"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +32,7 @@
         android:hint="@string/unesi_staru_sifru"
         android:inputType="number"
         android:maxLength="8"
+        android:layout_marginBottom="38dp"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/etCP2"
@@ -48,13 +49,14 @@
         android:layout_below="@+id/etCP1"
         android:layout_alignStart="@+id/etCP1"
         android:layout_alignLeft="@+id/etCP1"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="38dp"
         android:ems="10"
         android:hint="@string/unesi_novu_sifru"
         android:inputType="number"
         android:maxLength="8"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
+        app:layout_constraintTop_toBottomOf="@+id/etCP1"
         app:layout_constraintBottom_toTopOf="@+id/etCP3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -67,13 +69,14 @@
         android:layout_below="@+id/etCP2"
         android:layout_alignStart="@+id/etCP2"
         android:layout_alignLeft="@+id/etCP2"
-        android:layout_marginBottom="88dp"
+        android:layout_marginBottom="38dp"
         android:ems="10"
         android:hint="@string/ponovi_novu_sifru"
         android:inputType="number"
         android:maxLength="8"
         android:textAlignment="center"
         android:textColor="@color/cardview_light_background"
+        app:layout_constraintTop_toBottomOf="@+id/etCP2"
         app:layout_constraintBottom_toTopOf="@+id/btnCP1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
